--- a/.gitignore
+++ b/.gitignore
@@ -46,19 +46,18 @@
 #[cC][mM]ake[lL]ists.txt
 
 
-/build/common/*
-/build/redis*
-/build/cache/
-/build/config/tools/file_process
+/cache/
 #/build/config/ini/
 /deploy/config/struct/
 /deploy/config/proto/
 /deploy/data/logs/
+/deploy/bin/
+deploy/config/tools/config_generator
 
 /third_party/build
 /third_party/lib
-/third_party/lua-5.3.6/src/luac
-/third_party/lua-5.3.6/src/lua
+/third_party/lua/src/luac
+/third_party/lua/src/lua
 
 /.idea/*
 
