--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -2,4 +2,4 @@ FROM ubuntu:20.04
 # Set env
 ARG DEBIAN_FRONTEND=noninteractive
 # The build enviroment for Squick 
-RUN apt update && apt-get install -y git cmake unzip automake make g++ libtool libreadline6-dev libncurses5-dev pkg-config libssl-dev nodejs npm
+RUN apt update && apt-get install -y git cmake unzip automake make g++ libtool libreadline6-dev libncurses5-dev pkg-config libssl-dev nodejs npm libjsoncpp-dev uuid-dev zlib1g-dev
