Update env for lua

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,3 +1,7 @@
+cmake_minimum_required(VERSION 2.8)
+include("../global.cmake")
+
+
 add_subdirectory(db)
 add_subdirectory(login)
 add_subdirectory(game)
